--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gsap": "^2.1.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-three-fiber": "^2.4.3",
     "three": "^0.108.0"
