--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "three": "^0.108.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start PUBLIC_URL=http://localhost:3000/porfolio",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "yarn build",
+    "predeploy": "yarn build PUBLIC_URL=https://pohsiu.github.io/porfolio NODE_ENV=production",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -41,6 +41,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "2.0.1"
+    "gh-pages": "^2.2.0"
   }
 }
